charts/kustomize-fag-ingress-istio/overlays/dev/fag-deployment-order-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fag-order-gateway
  labels:
    app: fag-order-gateway
spec:
  selector:
    matchLabels:
      app: fag-order-gateway
  replicas: 0
  template:
    metadata:
      labels:
        app: fag-order-gateway
