charts/kustomize-fag-ingress-istio/overlays/dev/fag-ingress-order-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fag-istio-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "www.dev.sklrsn.in"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-secret-istio-order-gateway
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: default
