charts/kustomize-fag-ingress-istio/overlays/dev/fag-httproutes-order-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fag-istio-http-route
spec:
  parentRefs:
    - name: fag-istio-gateway
  hostnames:
    - "www.dev.sklrsn.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /order-gateway
      backendRefs:
        - name: fag-order-gateway
          port: 8080
          weight: 80
        - name: fag-order-gateway-canary
          port: 8080
          weight: 20
